<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">WhereRing</string>
    <string name="welcome">To get started, add a place to %s. You will need to be in that place or know its latitude and longitude.</string>
    <string name="alert_ticker">@string/app_name</string>
    <string name="notable_places">notable places</string>
    <string name="add_place">add place</string>
    <string name="preview_alert">preview alert</string>
    <string name="activate">activate</string>
    <string name="deactivate">deactivate</string>
    <string name="initd">activate at Android startup</string>
    <string name="name">name</string>
    <string name="latitude">latitude</string>
    <string name="longitude">longitude</string>
    <string name="radius">radius (m)</string>
    <string name="ringer_mode">ringer mode</string>
    <string name="done">done</string>
    <string name="revert">revert</string>
    <string name="place_edit_here">use current location</string>
    <string name="no_location_available">Your location is unknown.</string>
    <string name="entering">entering %s</string>
    <string name="leaving">leaving %s</string>
    <string name="change">new ringer mode %s</string>
    <string name="nochange">no change from ringer mode %s</string>
    <string name="alert_text">%s (%s)</string>
    <string name="suggestion_box">suggestion box</string>
    <string name="known_issues">known issues</string>
    <string name="show_on_map">show on map</string>
    <string name="not_a_coordinate">%s is not a coordinate</string>
    <string name="unsaveable_place">This place cannot be saved (%s)</string>
    <string name="empty_places">You don\'t have any %s to display.</string>
    <string name="how_to_add_places">To add places, press &lt;em>Menu&lt;/em> and touch &lt;em>%s&lt;/em>.</string>
</resources>
